--- a/index.html
+++ b/index.html
@@ -6,10 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
     <link rel="stylesheet" href="reset.css">
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilosPrincipales.css">
-    
+    <link rel="stylesheet" href="/estilos/cabecera.css">
+
 </head>
 <body>
-    
+    <header>
+        <section class="encabezado">
+            <div class="logo">
+                <h1 class="logo__imagen"><img src="/imagenes/Vector.png" alt="" srcset=""></h1>
+                <p class="logo__texto"><span>Alura</span>Geek</p>
+            </div>
+            <div class="barraBusqueda">
+                <input class="barraBusqueda__campo" type="search" name="" id="" placeholder="¿Qué deseas buscar?">
+                <input type="image" src="/imagenes/lupa.png" alt="">
+            </div>
+            <button class="encabezado__boton">Login</button>
+        </section>
+        <section class="banner">
+            <div class="banner__container">
+                <h2 class="banner__container___titulo">Febrero Promocional</h2>
+                <p class="banner__container___texto">Productos seleccionados con 33% de descuento</p>
+                <button class="banner__container___boton">Ver consolas</button>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
