--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilosPrincipales.css">
     <link rel="stylesheet" href="/estilos/cabecera.css">
+    <link rel="stylesheet" href="estilosHome.css">
 
 </head>
 <body>
@@ -34,5 +35,181 @@
             </div>
         </section>
     </header>
+    <main>
+        <section>
+            <div class="encabezado__seccion">
+                <h2 class="encabezado__seccion___titulo">Star Wars</h2> 
+                <a href="#" class="encabezado__seccion___enlace">ver todo
+                    <img  src="/imagenes/icono-flecha.png" alt="">
+                </a> 
+            </div>
+            <ul class="tarjetas">
+                <li class="tarjeta">
+                    <img src="/imagenes/starWars/img-stw1.png" alt="imagen1">
+                    <div class="tarjeta__container">
+                        <h3 class="tarjeta__container___titulo">poster star wars</h3>
+                        <p class="tarjeta__container___precio">$ 8</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/starWars/img-stw2.png" alt="imagen2">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Figura baby yoda</h3>
+                        <p class="tarjeta__container___precio">$ 10</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/starWars/img-stw3.png" alt="imagen3">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Poster stormtrooper</h3>
+                        <p class="tarjeta__container___precio">$ 8</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/starWars/img-stw4.png" alt="imagen4">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Poster yoda</h3>
+                        <p class="tarjeta__container___precio">$ 8</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/starWars/img-stw5.png" alt="imagen5">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Taza stormtrooper</h3>
+                        <p class="tarjeta__container___precio">$ 5</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/starWars/img-stw6.png" alt="imagen6">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Figura darth vader</h3>
+                        <p class="tarjeta__container___precio">$ 12</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <div class="encabezado__seccion">
+                <h2 class="encabezado__seccion___titulo">Consolas</h2> 
+                <a href="#" class="encabezado__seccion___enlace">ver todo
+                    <img  src="/imagenes/icono-flecha.png" alt="icono">
+                </a> 
+            </div>
+            <ul class="tarjetas">
+                <li class="tarjeta">
+                    <img src="/imagenes/consolas/consola-Mandoxbox.png" alt="imagen1">
+                    <div class="tarjeta__container">
+                        <h3 class="tarjeta__container___titulo">Mando xbox one</h3>
+                        <p class="tarjeta__container___precio">$ 80</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/consolas/consola-play.png" alt="imagen2">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Play Station 5</h3>
+                        <p class="tarjeta__container___precio">$ 800</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/consolas/consola-nintendo.png" alt="imagen3">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">consola NES</h3>
+                        <p class="tarjeta__container___precio">$ 200</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/consolas/consola-nintendoSwitch.png" alt="imagen4">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">consola nintendo switch</h3>
+                        <p class="tarjeta__container___precio">$ 400</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/consolas/consola-xbox.png" alt="imagen5">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Xbox x</h3>
+                        <p class="tarjeta__container___precio">$ 800</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/consolas/consola-atari.png" alt="imagen6">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Game Boy</h3>
+                        <p class="tarjeta__container___precio">$ 125</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <div class="encabezado__seccion">
+                <h2 class="encabezado__seccion___titulo">Diversos</h2> 
+                <a href="#" class="encabezado__seccion___enlace">ver todo
+                    <img  src="/imagenes/icono-flecha.png" alt="icono">
+                </a> 
+            </div>
+            <ul class="tarjetas">
+                <li class="tarjeta">
+                    <img src="/imagenes/diversos/diverso-atari.png" alt="imagen1">
+                    <div class="tarjeta__container">
+                        <h3 class="tarjeta__container___titulo">Camiseta Atari</h3>
+                        <p class="tarjeta__container___precio">$ 25</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/diversos/diverso nes.png" alt="imagen2">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Camiseta NES</h3>
+                        <p class="tarjeta__container___precio">$ 25</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/diversos/diverso-sonic.png" alt="imagen3">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Figura sonic</h3>
+                        <p class="tarjeta__container___precio">$ 10</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/diversos/diverso-consola.png" alt="imagen4">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">consola</h3>
+                        <p class="tarjeta__container___precio">$ 90</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/diversos/diverso-vr.png" alt="imagen5">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Gafas VR</h3>
+                        <p class="tarjeta__container___precio">$ 100</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+                <li class="tarjeta">
+                    <img src="/imagenes/diversos/diverso-pikachu.png" alt="imagen6">
+                    <div>
+                        <h3 class="tarjeta__container___titulo">Traje pikachu</h3>
+                        <p class="tarjeta__container___precio">$ 30</p>
+                        <a class="tarjeta__container___enlace" href="#">ver producto</a>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
