--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="estilosPrincipales.css">
     <link rel="stylesheet" href="/estilos/cabecera.css">
     <link rel="stylesheet" href="estilosHome.css">
+    <link rel="stylesheet" href="/estilos/piePagina.css">
 
 </head>
 <body>
@@ -211,5 +212,32 @@
             </ul>
         </section>
     </main>
+    <footer>
+        <section class="footer__datos">
+            <div class="logo">
+                <h1 class="logo__imagen"><img src="/imagenes/Vector.png" alt="" srcset=""></h1>
+                <p class="logo__texto"><span>Alura</span>Geek</p>
+            </div>
+            <ul class="footer__lista">
+                <li>Quiénes Somos</li>
+                <li>Política de Privacidad</li>
+                <li>Programa de Fidelidad</li>
+                <li>Nuestras tiendas</li>
+                <li>Quiero ser Franquiciado</li>
+                <li>Anuncie Aquí</li>
+            </ul>
+            <form action="" class="formulario">
+                <h3 class="formulario__titulo">Hable con Nosotros</h3>
+                <label for="nombre">Nombre</label>
+                <input type="text" name="" id="nombre" class="formulario__campo">
+                <textarea name="" id="" cols="30" rows="10" class="formulario__area" placeholder="Escribe tu mensaje"></textarea>
+                <input class="formulario__boton" type="submit" value="Enviar mensaje">
+            </form>
+        </section>
+        <section class="creditos">
+            <h3 class="creditos__titulo">Desarrollado por: Daniel Caro</h3>
+            <p class="creditos__texto">2022</p>
+        </section>
+    </footer>
 </body>
 </html>
