Disenho responsive home 1.0

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <header>
         <section class="encabezado">
             <div class="logo">
-                <h1 class="logo__imagen"><img src="/imagenes/Vector.png" alt="" srcset=""></h1>
+                <img src="/imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <div class="barraBusqueda">
                 <input class="barraBusqueda__campo" type="search" name="" id="" placeholder="¿Qué deseas buscar?">
-                <input type="image" src="/imagenes/lupa.png" alt="">
+                <input type="image" src="/imagenes/lupa.png" alt="lupa" >
             </div>
             <button class="encabezado__boton">Login</button>
         </section>
@@ -54,8 +54,9 @@
                     </div>
                 </li>
                 <li class="tarjeta">
+                    <div class="tarjeta__imagen"></div>
                     <img src="/imagenes/starWars/img-stw2.png" alt="imagen2">
-                    <div>
+                    <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Figura baby yoda</h3>
                         <p class="tarjeta__container___precio">$ 10</p>
                         <a class="tarjeta__container___enlace" href="#">ver producto</a>
@@ -63,7 +64,7 @@
                 </li>
                 <li class="tarjeta">
                     <img src="/imagenes/starWars/img-stw3.png" alt="imagen3">
-                    <div>
+                    <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Poster stormtrooper</h3>
                         <p class="tarjeta__container___precio">$ 8</p>
                         <a class="tarjeta__container___enlace" href="#">ver producto</a>
@@ -71,7 +72,7 @@
                 </li>
                 <li class="tarjeta">
                     <img src="/imagenes/starWars/img-stw4.png" alt="imagen4">
-                    <div>
+                    <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Poster yoda</h3>
                         <p class="tarjeta__container___precio">$ 8</p>
                         <a class="tarjeta__container___enlace" href="#">ver producto</a>
@@ -79,7 +80,7 @@
                 </li>
                 <li class="tarjeta">
                     <img src="/imagenes/starWars/img-stw5.png" alt="imagen5">
-                    <div>
+                    <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Taza stormtrooper</h3>
                         <p class="tarjeta__container___precio">$ 5</p>
                         <a class="tarjeta__container___enlace" href="#">ver producto</a>
@@ -87,7 +88,7 @@
                 </li>
                 <li class="tarjeta">
                     <img src="/imagenes/starWars/img-stw6.png" alt="imagen6">
-                    <div>
+                    <div class="tarjeta__container">
                         <h3 class="tarjeta__container___titulo">Figura darth vader</h3>
                         <p class="tarjeta__container___precio">$ 12</p>
                         <a class="tarjeta__container___enlace" href="#">ver producto</a>
@@ -215,7 +216,7 @@
     <footer>
         <section class="footer__datos">
             <div class="logo">
-                <h1 class="logo__imagen"><img src="/imagenes/Vector.png" alt="" srcset=""></h1>
+                <img src="/imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <ul class="footer__lista">
