--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <input class="barraBusqueda__campo" type="search" name="" id="" placeholder="¿Qué deseas buscar?">
                 <input type="image" src="/imagenes/lupa.png" alt="lupa" >
             </div>
-            <button class="encabezado__boton">Login</button>
+            <a href="/paginas/login/login.html" class="encabezado__boton">Login</a>
+            
         </section>
         <section class="banner">
             <div class="banner__container">
