--- a/paginas/admin/productos/productos.html
+++ b/paginas/admin/productos/productos.html
@@ -28,7 +28,7 @@
         <section>
             <div class="encabezado__seccion">
                 <h2 class="encabezado__seccion___titulo">Todos los productos</h2> 
-                <a href="#" class="encabezado__seccion___boton">Agregar producto</a> 
+                <a href="/paginas/admin/agregarProductos/agregarProductos.html" class="encabezado__seccion___boton">Agregar producto</a> 
             </div>
             <ul class="tarjetas">
                 <li class="tarjeta">
