--- a/paginas/login/login.html
+++ b/paginas/login/login.html
@@ -25,7 +25,7 @@
         </section>
     </header>
     <main>
-        <form action="" class="formulario__login">
+        <form action="/paginas/admin/productos/productos.html" class="formulario__login">
             <fieldset class="formulario__container">
                 <legend class="formulario__container__titulo">Iniciar Sesión</legend>
                 <input class="campos" type="email"  placeholder="Escriba su correo electrónico" required>
