--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <!--<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="estilosPrincipales.css">
-    <link rel="stylesheet" href="/estilos/cabecera.css">
-    <link rel="stylesheet" href="estilosHome.css">
-    <link rel="stylesheet" href="/estilos/piePagina.css">
+    <link rel="stylesheet" href="./estilosPrincipales.css">
+    <link rel="stylesheet" href="./estilos/cabecera.css">
+    <link rel="stylesheet" href="./estilosHome.css">
+    <link rel="stylesheet" href="./estilos/piePagina.css">
 
 </head>
 <body>
     <header>
         <section class="encabezado">
             <div class="logo">
-                <img src="/imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
+                <img src="./imagenes/Vector.png" alt="" srcset="" class="logo__imagen">
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <div class="barraBusqueda">
