mejorando el codigo 1.0

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="banner__container">
                 <h2 class="banner__container___titulo">Febrero Promocional</h2>
                 <p class="banner__container___texto">Productos seleccionados con 33% de descuento</p>
-                <button class="banner__container___boton">Ver consolas</button>
+                <a href="#seccionConsolas" class="banner__container___boton">Ver consolas</a>
             </div>
         </section>
     </header>
@@ -97,7 +97,7 @@
                 </li>
             </ul>
         </section>
-        <section>
+        <section id="seccionConsolas">
             <div class="encabezado__seccion">
                 <h2 class="encabezado__seccion___titulo">Consolas</h2> 
                 <a href="#" class="encabezado__seccion___enlace">ver todo
@@ -221,12 +221,12 @@
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <ul class="footer__lista">
-                <li>Quiénes Somos</li>
-                <li>Política de Privacidad</li>
-                <li>Programa de Fidelidad</li>
-                <li>Nuestras tiendas</li>
-                <li>Quiero ser Franquiciado</li>
-                <li>Anuncie Aquí</li>
+                <a href="#"><li>Quiénes Somos</li></a>
+                <a href="#"><li>Política de Privacidad</li></a>
+                <a href="#"><li>Programa de Fidelidad</li></a>
+                <a href="#"><li>Nuestras tiendas</li></a>
+                <a href="#"><li>Quiero ser Franquiciado</li></a>
+                <a href="#"><li>Anuncie Aquí</li></a>
             </ul>
             <form action="" class="formulario">
                 <h3 class="formulario__titulo">Hable con Nosotros</h3>
