--- a/paginas/admin/productos/productos.html
+++ b/paginas/admin/productos/productos.html
@@ -294,12 +294,12 @@
                 <p class="logo__texto"><span>Alura</span>Geek</p>
             </div>
             <ul class="footer__lista">
-                <li>Quiénes Somos</li>
-                <li>Política de Privacidad</li>
-                <li>Programa de Fidelidad</li>
-                <li>Nuestras tiendas</li>
-                <li>Quiero ser Franquiciado</li>
-                <li>Anuncie Aquí</li>
+                <a href="#"><li>Quiénes Somos</li></a>
+                <a href="#"><li>Política de Privacidad</li></a>
+                <a href="#"><li>Programa de Fidelidad</li></a>
+                <a href="#"><li>Nuestras tiendas</li></a>
+                <a href="#"><li>Quiero ser Franquiciado</li></a>
+                <a href="#"><li>Anuncie Aquí</li></a>
             </ul>
             <form action="" class="formulario">
                 <h3 class="formulario__titulo">Hable con Nosotros</h3>
