mejorando el codigo 2.0

--- a/paginas/admin/agregarProductos/agregarProductos.html
+++ b/paginas/admin/agregarProductos/agregarProductos.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agregar</title>
+    <title>Agregar Producto</title>
+    <link rel="shortcut icon" href="../../../imagenes/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../../../reset.css">
     <link rel="stylesheet" href="../../../estilosPrincipales.css">
     <link rel="stylesheet" href="../../../estilos/cabecera.css">
@@ -34,7 +35,7 @@
                     <input type="text" name="" id="url" class="container__formulario___campo">
                 </div>
                 <div class="container__formulario">
-                    <label for="categoria" class="container__formulario___titulo">Categoria</label>
+                    <label for="categoria" class="container__formulario___titulo">Categoría</label>
                     <input type="text" name="" id="categoria" class="container__formulario___campo">
                 </div>
                 <div class="container__formulario">
