--- a/paginas/admin/productos/productos.html
+++ b/paginas/admin/productos/productos.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
+    <link rel="shortcut icon" href="../../../imagenes/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="../../../reset.css">
     <link rel="stylesheet" href="../../../estilosPrincipales.css">
     <link rel="stylesheet" href="../../../estilos/cabecera.css">
